# doable

./: .abledev.json  .env  .eslintrc.js  .gitignore  .npmrc  Procfile  README.md  abledev-middleware.ts  app.json  blitz.config.ts  io.ts  package-lock.json  package.json  server.ts  tailwind.config.js
.husky/: pre-push
app/api/auth/: [...auth].ts
app/auth/components/: LoginForm.tsx  SignupForm.tsx
app/auth/mutations/: changePassword.ts  forgotPassword.test.ts  forgotPassword.ts  login.ts  resetPassword.test.ts  resetPassword.ts  signup.ts
app/auth/pages/: forgot-password.tsx  reset-password.tsx
app/auth/services/: createOrUpdateUser.ts
app/components/: Calendar.tsx  ChevronRightIcon.tsx  DatePicker.tsx  Header.tsx  Task.tsx
app/components/DatePicker/: Calendar.tsx  ChevronLeftIcon.tsx  DatePicker.tsx  dateUtils.ts  domUtils.ts  getDaysInMonth.ts  getWeeks.ts  useOnClickOutside.ts  useWindowEvent.ts
app/core/components/: LabeledTextField.tsx
app/core/helpers/: protectPage.ts  ts-helpers.ts
app/core/hooks/: useCurrentUser.ts
app/core/layouts/: Layout.tsx  PublicLayout.tsx
app/core/styles/: index.css
app/pages/: _app.tsx  _document.tsx  calendar.tsx  index.test.tsx  index.tsx  login.tsx  settings.tsx
app/tasks/mutations/: createTask.ts  toggleTask.ts
app/tasks/queries/: listTasks.ts
app/users/queries/: getCurrentUser.ts
db/: prisma-new.prisma  schema.prisma
db/migrations/20210725072754_add_task_table/: migration.sql
mailers/: forgotPasswordMailer.ts
prisma-diff/: Cargo.toml
prisma-diff/src/: main.rs
test/: utils.tsx
(+10 files in other folders)
